syntax = "proto3";
option java_multiple_files = true;
option java_package = "com.cshep4.premierpredictor.legacy";
//option go_package = "legacy";

package model;

service LegacyUserService {
    rpc GetLegacyUserById (LegacyIdRequest) returns (LegacyUserResponse);
    rpc LegacyLogin (LegacyLoginRequest) returns (LegacyUserResponse);
}

message LegacyIdRequest {
    int32 id = 1;
}

message LegacyUserResponse {
    string email = 1;
    string password = 2;
    string firstName = 3;
    string surname = 4;
    string joined = 5;
    bool adFree = 6;
    bool admin = 7;
}

message LegacyLoginRequest {
    string email = 1;
    string password = 2;
}